--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
-  --tile-size: 40px;
+  --tile-size: 50px;
 }
 
 #board {
@@ -39,4 +39,56 @@
 h1 {
   text-align: center;
   margin: 50px 0 50px 0;
+}
+
+/* Black Pieces */
+.black-pawn {
+    background-image: url("./assets/black-pawn.png");
+    background-size: cover;
+}
+.black-knight {
+    background-image: url("./assets/black-knight.png");
+    background-size: cover;
+}
+.black-bishop {
+    background-image: url("./assets/black-bishop.png");
+    background-size: cover;
+}
+.black-rook {
+    background-image: url("./assets/black-rook.png");
+    background-size: cover;
+}
+.black-queen {
+    background-image: url("./assets/black-queen.png");
+    background-size: cover;
+}
+.black-king {
+    background-image: url("./assets/black-king.png");
+    background-size: cover;
+}
+
+/* White Pieces */
+.white-pawn {
+    background-image: url("./assets/white-pawn.png");
+    background-size: cover;
+}
+.white-knight {
+    background-image: url("./assets/white-knight.png");
+    background-size: cover;
+}
+.white-bishop {
+    background-image: url("./assets/white-bishop.png");
+    background-size: cover;
+}
+.white-rook {
+    background-image: url("./assets/white-rook.png");
+    background-size: cover;
+}
+.white-queen {
+    background-image: url("./assets/white-queen.png");
+    background-size: cover;
+}
+.white-king {
+    background-image: url("./assets/white-king.png");
+    background-size: cover;
 }
